Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/BachelorsDegree__c.field-meta.xml
<CustomField>
    <fullName>BachelorsDegree__c</fullName>
    <label>Bachelors Degree</label>
    <length>40</length>
    <type>Text</type>
</CustomField>