Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Banner__c.field-meta.xml
<CustomField>
    <fullName>Banner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banner</label>
    <type>Checkbox</type>
</CustomField>