Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Brochure__c.field-meta.xml
<CustomField>
    <fullName>Brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brochure</label>
    <type>Checkbox</type>
</CustomField>