Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash</label>
    <type>Checkbox</type>
</CustomField>