Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Cheque__c.field-meta.xml
<CustomField>
    <fullName>Cheque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque</label>
    <type>Checkbox</type>
</CustomField>