Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College</label>
    <type>Checkbox</type>
</CustomField>