Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/CompAddress__c.field-meta.xml
<CustomField>
    <fullName>CompAddress__c</fullName>
    <label>Company Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>