Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/CompName__c.field-meta.xml
<CustomField>
    <fullName>CompName__c</fullName>
    <label>Company Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>