Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <label>Database</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DB2</fullName>
            </value>
            <value>
                <fullName>Microsoft Access</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>