Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>40</length>
    <type>Text</type>
</CustomField>