Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Evening__c.field-meta.xml
<CustomField>
    <fullName>Evening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evening</label>
    <type>Checkbox</type>
</CustomField>