Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/FindOthers__c.field-meta.xml
<CustomField>
    <fullName>FindOthers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Others</label>
    <type>Checkbox</type>
</CustomField>