Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Friend__c.field-meta.xml
<CustomField>
    <fullName>Friend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friend/Relative</label>
    <type>Checkbox</type>
</CustomField>