Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/FullTime__c.field-meta.xml
<CustomField>
    <fullName>FullTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Time Education</label>
    <type>Checkbox</type>
</CustomField>