Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages Known</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>