Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Leaflet__c.field-meta.xml
<CustomField>
    <fullName>Leaflet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaflet</label>
    <type>Checkbox</type>
</CustomField>