Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/MastersDegree__c.field-meta.xml
<CustomField>
    <fullName>MastersDegree__c</fullName>
    <label>Masters Degree</label>
    <length>40</length>
    <type>Text</type>
</CustomField>