Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Morning__c.field-meta.xml
<CustomField>
    <fullName>Morning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Morning</label>
    <type>Checkbox</type>
</CustomField>