Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/OtherQual__c.field-meta.xml
<CustomField>
    <fullName>OtherQual__c</fullName>
    <label>Others (if any)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>