Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PeopleSoft</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Siebel</fullName>
            </value>
            <value>
                <fullName>Tibco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>