Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/ProgLanguage__c.field-meta.xml
<CustomField>
    <fullName>ProgLanguage__c</fullName>
    <label>Programming Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>COBOL</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>