Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/RateYourself__c.field-meta.xml
<CustomField>
    <fullName>RateYourself__c</fullName>
    <label>How would you Rate yourself ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Experienced</fullName>
            </value>
            <value>
                <fullName>Fairly Experienced</fullName>
            </value>
            <value>
                <fullName>Slightly Experienced</fullName>
            </value>
            <value>
                <fullName>Inexperienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>