Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/SelfEmp__c.field-meta.xml
<CustomField>
    <fullName>SelfEmp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Employed</label>
    <type>Checkbox</type>
</CustomField>