Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/SFAdmin__c.field-meta.xml
<CustomField>
    <fullName>SFAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce for Administrator</label>
    <type>Checkbox</type>
</CustomField>