Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/SFBeginner__c.field-meta.xml
<CustomField>
    <fullName>SFBeginner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce for Beginners</label>
    <type>Checkbox</type>
</CustomField>