Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/SFDev__c.field-meta.xml
<CustomField>
    <fullName>SFDev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce for Developer</label>
    <type>Checkbox</type>
</CustomField>