Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/SFTester__c.field-meta.xml
<CustomField>
    <fullName>SFTester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce for Tester</label>
    <type>Checkbox</type>
</CustomField>