Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/TrainingLast12Months__c.field-meta.xml
<CustomField>
    <fullName>TrainingLast12Months__c</fullName>
    <label>Training In Last 12 Months</label>
    <type>TextArea</type>
</CustomField>