Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/TrainingLastThreeYears__c.field-meta.xml
<CustomField>
    <fullName>TrainingLastThreeYears__c</fullName>
    <label>Training From One to Three years ago</label>
    <type>TextArea</type>
</CustomField>