Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Unemployed__c.field-meta.xml
<CustomField>
    <fullName>Unemployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unemployed</label>
    <type>Checkbox</type>
</CustomField>