Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/WebTech__c.field-meta.xml
<CustomField>
    <fullName>WebTech__c</fullName>
    <label>Web Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASP</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>JSP</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>