Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/fields/Weekends__c.field-meta.xml
<CustomField>
    <fullName>Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekends</label>
    <type>Checkbox</type>
</CustomField>