Reetan.Nayak Dev 25/force-app/main/default/objects/Lead/listViews/Rainbow_Sales_Lead.listView-meta.xml
<ListView>
    <fullName>Rainbow_Sales_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Rainbow Sales</label>
    <queue>Rainbow_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>